# dprint-plugin-stylua

./: Cargo.toml  README.md  dprint.json
src/: config.rs  lib.rs  plugin.rs
