[package]
name = "dprint-plugin-stylua"
version = "0.2.1"
authors = ["RubixDev"]
edition = "2021"
homepage = "https://github.com/RubixDev/dprint-plugin-stylua"
license = "GPL-3.0-only"
repository = "https://github.com/RubixDev/dprint-plugin-stylua"
description = "StyLua integration for dprint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["lua52", "lua53", "lua54", "luau"]

lua52 = ["stylua/lua52"]
lua53 = ["stylua/lua53"]
lua54 = ["stylua/lua54"]
luau = ["stylua/luau"]

[dependencies]
anyhow = "1.0.80"
dprint-core = { version = "0.66.1", features = ["wasm"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
stylua = { version = "0.20.0", features = ["serialize", "fromstr"], default-features = false }
